--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             ];
 
             // ⚠️ กรุณาเปลี่ยน URL ด้านล่างนี้เป็น webhook ของ n8n ที่คุณสร้างไว้สำหรับ Google Sheet และ Telegram โดยเฉพาะ ⚠️
-            const n8nWebhookUrlGoogleSheet = "https://your-n8n-domain/webhook/your-google-sheet-id"; // YOUR_N8N_WEBHOOK_URL_FOR_GOOGLE_SHEET
+            const n8nWebhookUrlGoogleSheet = "https://kornkawes.app.n8n.cloud/webhook/c80b6af7-8a5a-4b68-ad7e-4771162c9428"; // YOUR_N8N_WEBHOOK_URL_FOR_GOOGLE_SHEET
             const n8nWebhookUrlTelegram = "https://your-n8n-domain/webhook/your-telegram-id"; // YOUR_N8N_WEBHOOK_URL_FOR_TELEGRAM
 
             const menuItemsEl = document.getElementById('menu-items');
@@ -510,3 +510,4 @@
     </script>
 </body>
 </html>
+
