--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
             // ⚠️ กรุณาเปลี่ยน URL ด้านล่างนี้เป็น webhook ของ n8n ที่คุณสร้างไว้สำหรับ Google Sheet และ Telegram โดยเฉพาะ ⚠️
             const n8nWebhookUrlGoogleSheet = "https://kornkawes.app.n8n.cloud/webhook/c80b6af7-8a5a-4b68-ad7e-4771162c9428"; // YOUR_N8N_WEBHOOK_URL_FOR_GOOGLE_SHEET
-            const n8nWebhookUrlTelegram = "https://your-n8n-domain/webhook/your-telegram-id"; // YOUR_N8N_WEBHOOK_URL_FOR_TELEGRAM
+            const n8nWebhookUrlTelegram = "https://kornkawes.app.n8n.cloud/webhook/e77e8056-2aec-4f97-b59e-43a56ce08599"; // YOUR_N8N_WEBHOOK_URL_FOR_TELEGRAM
 
             const menuItemsEl = document.getElementById('menu-items');
             const totalPriceEl = document.getElementById('total-price');
@@ -510,4 +510,5 @@
     </script>
 </body>
 </html>
+
 
