--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
         <!-- Order Form Section -->
         <div id="order-form-section">
-            <!-- Updated font and color for Verve Juice name -->
-            <h1 class="text-3xl font-bold text-center mb-6" style="color: #39531a; font-family: 'Rubik Bubbles', cursive;">Verve Juice</h1>
+            <!-- Updated font size for Verve Juice name -->
+            <h1 class="text-3xl font-bold text-center mb-6" style="color: #39531a; font-family: 'Rubik Bubbles', cursive; font-size: 4.5rem;">Verve Juice</h1>
 
             <div class="mb-4">
                 <label for="customerName" class="block text-gray-700 font-bold mb-2">ชื่อของคุณ</label>
