--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         /* Import Kanit, Rubik Bubbles, and Noto Sans Thai fonts from Google Fonts */
         @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&family=Inter:wght@400;700&family=Rubik+Bubbles&family=Noto+Sans+Thai:wght@400;700&display=swap');
         body {
-            font-family: 'Noto Sans Thai', sans-serif; /* Changed to Noto Sans Thai /
-            background-color: #f7f3e9; / Kept original light background */
+            font-family: 'Noto Sans Thai', sans-serif;
+            background-color: #f7f3e9;
         }
         /* Styles for store name and menu headings */
         .cute-font {
@@ -24,9 +24,7 @@
         .card {
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
         }
-        /* Removed cute-gradient as Verve Juice name will have a solid color /
         .btn-plus-minus {
-            / These properties already make the buttons circular */
             @apply w-8 h-8 flex items-center justify-center rounded-full text-white text-lg font-bold;
         }
         input[type="number"]::-webkit-inner-spin-button,
@@ -55,6 +53,7 @@
 
     <div class="container bg-white p-6 rounded-3xl shadow-xl w-full max-w-lg transition-all duration-300">
 
+        <!-- Order Form Section -->
         <div id="order-form-section">
             <h1 class="text-3xl font-bold text-center mb-6" style="color: #39531a; font-family: 'Rubik Bubbles', cursive; font-size: 2.5rem;">VERVE JUICE</h1>
 
@@ -79,7 +78,8 @@
 
             <h2 class="text-2xl font-bold mb-4" style="color: #39531a;">เมนู</h2>
             <div id="menu-items" class="space-y-4">
-                </div>
+                <!-- Menu items will be rendered here by JavaScript -->
+            </div>
 
             <div class="mt-6 p-4 bg-emerald-100 rounded-2xl flex justify-between items-center">
                 <span class="text-lg font-bold text-gray-800">ราคารวม:</span>
@@ -91,6 +91,7 @@
             </button>
         </div>
 
+        <!-- Payment Section -->
         <div id="payment-section" class="hidden">
             <h1 class="text-3xl font-bold text-center mb-6" style="color: #39531a;">ชำระเงิน</h1>
 
@@ -99,7 +100,8 @@
             </button>
             <div id="order-summary" class="p-4 bg-gray-50 rounded-2xl mb-4">
                 <h3 class="font-bold text-lg mb-2">สรุปรายการสั่งซื้อ:</h3>
-                </div>
+                <!-- Order summary will be rendered here -->
+            </div>
             <div class="p-4 bg-emerald-100 rounded-2xl text-center mb-6">
                 <p class="text-xl font-bold text-emerald-700">ยอดที่ต้องชำระ</p>
                 <p id="payment-total" class="text-4xl font-extrabold text-emerald-600 my-2">฿0</p>
@@ -131,7 +133,7 @@
 
             <div class="mt-6">
                 <label for="slipUpload" class="block text-gray-700 font-bold mb-2">อัปโหลดสลิปการโอน</label>
-                <input type="file" id="slipUpload" class="w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300">
+                <input type="file" id="slipUpload" accept="image/*" class="w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300">
             </div>
 
             <div id="slip-preview-container" class="hidden mt-4 p-4 border rounded-xl bg-gray-50 flex flex-col items-center">
@@ -145,6 +147,7 @@
             </button>
         </div>
 
+        <!-- Confirmation Section -->
         <div id="confirmation-section" class="hidden text-center">
             <svg class="mx-auto h-16 w-16 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
             <h1 class="text-3xl font-bold text-center mt-4 text-emerald-600 cute-font">ขอบคุณสำหรับคำสั่งซื้อ!</h1>
@@ -157,7 +160,6 @@
     </div>
 
     <script>
-        // Global function to show a message box, moved to the global scope to be accessible by onerror
         window.showMessageBox = (message, color) => {
             const messageBox = document.createElement('div');
             messageBox.className = `fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-${color}-500 text-white px-6 py-4 rounded-xl shadow-lg z-50 transition-all duration-300`;
@@ -166,7 +168,6 @@
             setTimeout(() => { messageBox.remove(); }, 3000);
         };
 
-        // Function for exponential backoff with retry logic
         async function fetchWithRetry(url, options, retries = 3, delay = 1000) {
             for (let i = 0; i < retries; i++) {
                 try {
@@ -174,27 +175,23 @@
                     if (response.ok) {
                         return response;
                     } else {
-                        // Log detailed error if response is not ok but fetched
                         console.error(`Attempt ${i + 1} failed with status: ${response.status} - ${response.statusText}`);
-                        if (response.status === 429 || response.status >= 500) { // Retry on Too Many Requests or Server Errors
+                        if (response.status === 429 || response.status >= 500) {
                             await new Promise(resolve => setTimeout(resolve, delay * Math.pow(2, i)));
                         } else {
-                            // For other client errors (e.g., 400, 401, 404), don't retry, just throw
                             throw new Error(`HTTP error! status: ${response.status} - ${response.statusText}`);
                         }
                     }
                 } catch (error) {
-                    // Log the error caught during fetch (e.g., TypeError: Failed to fetch)
                     console.error(`Attempt ${i + 1} caught error:`, error);
                     if (i < retries - 1) {
-                        // Wait before retrying
                         await new Promise(resolve => setTimeout(resolve, delay * Math.pow(2, i)));
                     } else {
-                        throw error; // Re-throw if last retry fails
+                        throw error;
                     }
                 }
             }
-            throw new Error('Max retries exceeded'); // Should not be reached if retries are exhausted
+            throw new Error('Max retries exceeded');
         }
         document.addEventListener('DOMContentLoaded', () => {
             const menu = [
@@ -208,13 +205,8 @@
                 { id: 'recharge-me', name: 'Recharge Me', price: 60, unit: 'ขวด', ingredients: 'แอปเปิ้ล, ขิง, มะนาว', properties: 'สรรพคุณ: กระตุ้นร่างกายให้ฟื้นตัวจากการเมื่อยล้า', imageUrl: 'https://github.com/kornkawes/VerveImage/blob/main/8.png?raw=true' }
             ];
 
-            // ⚠️ [START] MODIFICATION: แยก Webhook URLs ⚠️
-            // กรุณาเปลี่ยน URL ด้านล่างนี้เป็น Webhook ของ n8n ที่คุณสร้างไว้
-            // URL สำหรับรับ "ข้อมูลออเดอร์"
-            const n8nOrderWebhookUrl = "https://kornkawes.app.n8n.cloud/webhook-test/3292a5c3-0f7f-424f-92f8-7dc42f51d763";
-            // URL สำหรับรับ "รูปสลิป"
+            const n8nOrderWebhookUrl = "https://kornkawes.app.n8n.cloud/webhook/3292a5c3-0f7f-424f-92f8-7dc42f51d763";
             const n8nSlipWebhookUrl = "https://kornkawes.app.n8n.cloud/webhook-test/e993773f-f035-4524-a537-e1691f709d01";
-            // ⚠️ [END] MODIFICATION ⚠️
 
             const menuItemsEl = document.getElementById('menu-items');
             const totalPriceEl = document.getElementById('total-price');
@@ -237,7 +229,6 @@
             const backToMenuBtn = document.getElementById('back-to-menu-btn');
             const uploadSlipTextEl = document.getElementById('upload-slip-text');
             const uploadSlipSpinnerEl = document.getElementById('upload-slip-spinner');
-            const qrCodeImage = document.getElementById('qrCodeImage');
 
             let order = { items: {}, total: 0 };
             
@@ -424,12 +415,17 @@
                 }
             });
 
-            // ⚠️ [START] MODIFICATION: แก้ไข Logic การอัปโหลด ⚠️
+            // ⚠️ [START] MODIFICATION: แก้ไข Logic การอัปโหลดเป็น FormData ⚠️
             uploadSlipBtn.addEventListener('click', async () => {
                 const slipFile = slipUploadEl.files[0];
                 if (!slipFile) {
                     showMessageBox('กรุณาอัปโหลดสลิปการโอนเงิน', 'red');
                     return;
+                }
+
+                if (!n8nOrderWebhookUrl || n8nOrderWebhookUrl.includes("ORDER_DATA_WEBHOOK_ID") || !n8nSlipWebhookUrl || n8nSlipWebhookUrl.includes("SLIP_IMAGE_WEBHOOK_ID")) {
+                     showMessageBox('Webhook URL ยังไม่ได้ถูกตั้งค่า กรุณาแก้ไขในโค้ด', 'orange');
+                     return;
                 }
 
                 uploadSlipBtn.disabled = true;
@@ -438,80 +434,60 @@
 
                 const currentOrder = JSON.parse(localStorage.getItem('currentOrder'));
                 const orderTime = new Date().toISOString();
-                const orderId = Date.now().toString(); // สร้าง ID ที่ไม่ซ้ำกันสำหรับออเดอร์นี้
+                const orderId = Date.now().toString();
 
-                const reader = new FileReader();
-                reader.readAsDataURL(slipFile);
-                reader.onloadend = async () => {
-                    const base64Slip = reader.result;
-
-                    // 1. เตรียม Payload สำหรับ "ข้อมูลออเดอร์"
-                    const orderPayload = {
-                        orderId: orderId, // เพิ่ม ID เพื่อใช้เชื่อมกับข้อมูลสลิป
-                        customerName: currentOrder.customerName,
-                        customerContact: currentOrder.customerContact,
-                        customerNote: currentOrder.customerNote,
-                        items: currentOrder.items,
-                        total: currentOrder.total,
-                        orderTime: orderTime,
-                    };
-
-                    // 2. เตรียม Payload สำหรับ "รูปสลิป"
-                    const slipPayload = {
-                        orderId: orderId, // ใช้ ID เดียวกันเพื่อระบุว่าเป็นออเดอร์เดียวกัน
-                        paymentSlipUrl: base64Slip
-                    };
-
-                    // 🚀 ส่งข้อมูลไปที่ n8n สองขั้นตอน
-                    try {
-                        if (!n8nOrderWebhookUrl || !n8nSlipWebhookUrl || n8nOrderWebhookUrl.includes("ORDER_DATA_WEBHOOK_ID") || n8nSlipWebhookUrl.includes("SLIP_IMAGE_WEBHOOK_ID")) {
-                             showMessageBox('Webhook URL ยังไม่ได้ถูกตั้งค่า กรุณาแก้ไขในโค้ด', 'orange');
-                             throw new Error('Webhook URLs are not configured.');
-                        }
-
-                        // ขั้นตอนที่ 1: ส่งข้อมูลออเดอร์
-                        console.log("Sending order data...");
-                        await fetchWithRetry(n8nOrderWebhookUrl, {
-                            method: 'POST',
-                            headers: { 'Content-Type': 'application/json' },
-                            body: JSON.stringify(orderPayload)
-                        });
-                         console.log("Order data sent successfully.");
-
-                        // ขั้นตอนที่ 2: ส่งรูปสลิป
-                        console.log("Sending slip data...");
-                        await fetchWithRetry(n8nSlipWebhookUrl, {
-                            method: 'POST',
-                            headers: { 'Content-Type': 'application/json' },
-                            body: JSON.stringify(slipPayload)
-                        });
-                        console.log("Slip data sent successfully.");
-
-                        // ➡️ แสดงหน้ายืนยันเมื่อทุกอย่างสำเร็จ
-                        paymentSection.classList.add('hidden');
-                        confirmationSection.classList.remove('hidden');
-
-                    } catch (error) {
-                        console.error('Error sending data to n8n:', error);
-                        showMessageBox('เกิดข้อผิดพลาดในการส่งข้อมูล: กรุณาตรวจสอบการเชื่อมต่อและลองอีกครั้ง', 'red');
-                    } finally {
-                        // คืนค่าปุ่มให้กดได้อีกครั้ง ไม่ว่าจะสำเร็จหรือล้มเหลว
-                        uploadSlipBtn.disabled = false;
-                        uploadSlipTextEl.classList.remove('hidden');
-                        uploadSlipSpinnerEl.classList.add('hidden');
-                    }
+                // 1. ส่งข้อมูลออเดอร์ (JSON) - ส่วนนี้ทำงานได้ดีอยู่แล้ว
+                const orderPayload = {
+                    orderId: orderId,
+                    customerName: currentOrder.customerName,
+                    customerContact: currentOrder.customerContact,
+                    customerNote: currentOrder.customerNote,
+                    items: currentOrder.items,
+                    total: currentOrder.total,
+                    orderTime: orderTime,
                 };
 
-                reader.onerror = (error) => {
-                    console.error('Error reading file:', error);
-                    showMessageBox('ไม่สามารถอ่านไฟล์สลิปได้', 'red');
+                try {
+                    console.log("Sending order data to:", n8nOrderWebhookUrl);
+                    await fetchWithRetry(n8nOrderWebhookUrl, {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify(orderPayload)
+                    });
+                    console.log("Order data sent successfully.");
+
+                    // 2. ส่งไฟล์สลิปด้วย FormData
+                    // 💡 คำแนะนำสำหรับ n8n:
+                    //    - ใน Webhook node ให้ตั้งค่า "Response Mode" เป็น "On Received"
+                    //    - ข้อมูลที่เป็น Text (orderId) จะอยู่ใน {{$json.orderId}}
+                    //    - ข้อมูลไฟล์ (slipImage) จะอยู่ใน {{$binary.slipImage}}
+                    const formData = new FormData();
+                    formData.append('orderId', orderId);
+                    formData.append('slipImage', slipFile); // 'slipImage' คือชื่อ field ของไฟล์
+
+                    console.log("Sending slip data as FormData to:", n8nSlipWebhookUrl);
+                    await fetchWithRetry(n8nSlipWebhookUrl, {
+                        method: 'POST',
+                        body: formData
+                        // ไม่ต้องใส่ 'headers' - browser จะจัดการให้เอง
+                    });
+                    console.log("Slip data sent successfully.");
+                    
+                    // แสดงหน้ายืนยันเมื่อทุกอย่างสำเร็จ
+                    paymentSection.classList.add('hidden');
+                    confirmationSection.classList.remove('hidden');
+
+                } catch (error) {
+                    console.error('An error occurred during submission:', error);
+                    showMessageBox('เกิดข้อผิดพลาดในการส่งข้อมูล กรุณาลองอีกครั้ง', 'red');
+                } finally {
+                    // คืนค่าปุ่มให้กดได้อีกครั้ง ไม่ว่าจะสำเร็จหรือล้มเหลว
                     uploadSlipBtn.disabled = false;
                     uploadSlipTextEl.classList.remove('hidden');
                     uploadSlipSpinnerEl.classList.add('hidden');
-                };
+                }
             });
             // ⚠️ [END] MODIFICATION ⚠️
-
 
             copyAccountBtn.addEventListener('click', () => {
                 const accountNumberText = document.getElementById('bank-account-number').textContent.split(': ')[1];
@@ -534,4 +510,3 @@
     </script>
 </body>
 </html>
-
