--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 
         <!-- Payment Section -->
         <div id="payment-section" class="hidden">
-            <h1 class="text-3xl font-bold text-center mb-6" style="color: #39531a;">ชำระเงิน</h1>
+            <h1 class="text-3xl font-bold text-center mb-2" style="color: #39531a;">ชำระเงิน</h1>
+            <!-- MODIFICATION: Added warning text -->
+            <p class="text-center text-red-600 text-xs mb-4">(กรุณาบันทึกภาพหน้าจอออเดอร์เก็บไว้เป็นหลักฐาน)</p>
 
             <button id="back-to-menu-btn" class="mb-4 px-4 py-2 bg-gray-200 text-gray-700 font-bold rounded-xl hover:bg-gray-300 transition-colors">
                 ย้อนกลับ
@@ -217,7 +219,6 @@
                 setTimeout(() => { messageBox.remove(); }, 3000);
             };
 
-            // --- MODIFICATION START: Changed queue number generation to a 3-character random code ---
             const getOrderQueueNumber = () => {
                 const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
                 let result = '';
@@ -226,7 +227,6 @@
                 }
                 return result;
             };
-            // --- MODIFICATION END ---
 
             async function fetchWithRetry(url, options, retries = 3, delay = 1000) {
                 for (let i = 0; i < retries; i++) {
@@ -368,7 +368,7 @@
                 if (Object.keys(order.items).length === 0) return showMessageBox('กรุณาเลือกเมนูอย่างน้อย 1 รายการ', 'red');
 
                 const finalOrder = {
-                    queueNumber: `#${getOrderQueueNumber()}`,
+                    queueNumber: getOrderQueueNumber(),
                     customerName: customerName,
                     customerContact: {
                         phone: customerPhone,
@@ -401,7 +401,7 @@
                     timeZone: 'Asia/Bangkok'
                 });
 
-                let summaryHtml = `<p class="text-sm font-bold text-gray-700">คิวที่: ${finalOrder.queueNumber}</p>`;
+                let summaryHtml = `<p class="text-sm font-bold text-gray-700">Order ID: ${finalOrder.queueNumber}</p>`;
                 summaryHtml += `<p class="text-sm font-bold text-gray-700 mt-2">วันที่สั่ง: ${displayDate}</p>`;
                 summaryHtml += `<p class="text-sm font-bold text-gray-700 mt-2">ชื่อลูกค้า: ${finalOrder.customerName}</p>`;
                 summaryHtml += `<p class="text-sm font-bold text-gray-700 mt-2">ช่องทางการติดต่อ: ${finalOrder.customerContact.phone}</p>`;
