--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div id="payment-section" class="hidden">
             <h1 class="text-3xl font-bold text-center mb-2" style="color: #39531a;">ชำระเงิน</h1>
             <!-- MODIFICATION: Added warning text -->
-            <p class="text-center text-red-600 text-xs mb-4">(กรุณาบันทึกภาพหน้าจอออเดอร์เก็บไว้เป็นหลักฐาน)</p>
+            <p class="text-center text-red-600 text-xs mb-4">(กรุณาบันทึกภาพหน้าจอนี้ไว้เป็นหลักฐานคำสั่งซื้อ)</p>
 
             <button id="back-to-menu-btn" class="mb-4 px-4 py-2 bg-gray-200 text-gray-700 font-bold rounded-xl hover:bg-gray-300 transition-colors">
                 ย้อนกลับ
@@ -495,6 +495,7 @@
     </script>
 </body>
 </html>
+
 
 
 
