--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <label for="customerPhone" class="block text-gray-700 font-bold mb-2">ช่องทางการติดต่อ*</label>
                 <input type="tel" id="customerPhone" placeholder="เบอร์โทรศัพท์ (10 หลัก)" class="w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300 mb-2">
                 <div class="flex space-x-2">
-                    <input type="text" id="contactApp" placeholder="ชื่อแอป เช่น Line" class="w-1/3 px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300">
-                    <input type="text" id="contactId" placeholder="ไอดี เช่น @vervejuice" class="w-2/3 px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300">
+                    <input type="text" id="contactApp" placeholder="Line,Instagram" class="w-1/3 px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300">
+                    <input type="text" id="contactId" placeholder="@vervejuice (ไม่บังคับ)" class="w-2/3 px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300">
                 </div>
             </div>
 
@@ -105,8 +105,6 @@
         <!-- Payment Section -->
         <div id="payment-section" class="hidden">
             <h1 class="text-3xl font-bold text-center mb-2" style="color: #39531a;">ชำระเงิน</h1>
-            <!-- MODIFICATION: Added warning text -->
-            <p class="text-center text-red-600 text-xs mb-4">(กรุณาบันทึกภาพหน้าจอนี้ไว้เป็นหลักฐานคำสั่งซื้อ)</p>
 
             <button id="back-to-menu-btn" class="mb-4 px-4 py-2 bg-gray-200 text-gray-700 font-bold rounded-xl hover:bg-gray-300 transition-colors">
                 ย้อนกลับ
@@ -164,7 +162,13 @@
         <div id="confirmation-section" class="hidden text-center">
             <svg class="mx-auto h-16 w-16 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
             <h1 class="text-3xl font-bold text-center mt-4 text-emerald-600 cute-font">ขอบคุณสำหรับคำสั่งซื้อ!</h1>
-            <p class="mt-2 text-gray-600">เราได้รับสลิปการโอนเงินเรียบร้อยแล้ว จะรีบตรวจสอบและจัดเตรียมน้ำผลไม้ให้คุณค่ะ</p>
+            <p class="mt-2 text-gray-600">หลังจากตรวจสอบสลิปแล้ว จะเริ่มดำเนินการออเดอร์ให้ทันทีครับ</p>
+            <p class="text-center text-red-600 text-xs mb-4">(กรุณาบันทึกภาพหน้าจอนี้ไว้เป็นหลักฐานคำสั่งซื้อ)</p>
+
+            <div id="final-order-summary" class="mt-6 text-left p-4 bg-gray-50 rounded-2xl border border-emerald-200">
+                <!-- Final summary will be rendered here by JavaScript -->
+            </div>
+            
             <button onclick="window.location.reload()" class="mt-6 bg-gray-400 text-white font-bold py-3 px-6 rounded-xl shadow-lg hover:bg-gray-500 transition-colors">
                 สั่งสินค้าเพิ่ม
             </button>
@@ -208,6 +212,7 @@
             const backToMenuBtn = document.getElementById('back-to-menu-btn');
             const uploadSlipTextEl = document.getElementById('upload-slip-text');
             const uploadSlipSpinnerEl = document.getElementById('upload-slip-spinner');
+            const finalOrderSummaryEl = document.getElementById('final-order-summary');
 
             let order = { items: {}, total: 0 };
             
@@ -479,6 +484,33 @@
                     paymentSection.classList.add('hidden');
                     confirmationSection.classList.remove('hidden');
 
+                    // Render final summary
+                    const displayDate = new Date(currentOrder.orderDate).toLocaleString('th-TH', {
+                        year: 'numeric', month: 'long', day: 'numeric',
+                        hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Bangkok'
+                    });
+                    let summaryHtml = `<p class="text-sm font-bold text-gray-700">Order ID: ${currentOrder.queueNumber}</p>`;
+                    summaryHtml += `<p class="text-sm font-bold text-gray-700 mt-2">วันที่สั่ง: ${displayDate}</p>`;
+                    summaryHtml += `<p class="text-sm font-bold text-gray-700 mt-2">ชื่อลูกค้า: ${currentOrder.customerName}</p>`;
+                    if (currentOrder.customerContact.other) {
+                        summaryHtml += `<p class="text-sm font-bold text-gray-700 mt-2">ช่องทางติดต่ออื่น: ${currentOrder.customerContact.other}</p>`;
+                    }
+                    if (currentOrder.customerNote) {
+                        summaryHtml += `<p class="text-sm font-bold text-gray-700 mt-2">หมายเหตุ: ${currentOrder.customerNote}</p>`;
+                    }
+                    summaryHtml += `<div class="mt-4"><h4 class="font-bold">รายการสั่งซื้อ:</h4></div>`;
+                    currentOrder.items.forEach(item => {
+                        summaryHtml += `<p class="text-sm text-gray-600">${item.name} x ${item.quantity} ${item.unit} (฿${item.price * item.quantity})</p>`;
+                         if (item.allergyNote) {
+                            summaryHtml += `<p class="ml-4 text-xs text-red-500">หมายเหตุแพ้อาหาร: ${item.allergyNote}</p>`;
+                        }
+                    });
+                    summaryHtml += `<div class="mt-4 pt-4 border-t border-emerald-200 flex justify-between items-center">
+                        <span class="font-bold text-gray-800">ยอดรวมสุทธิ:</span>
+                        <span class="text-xl font-extrabold text-emerald-600">฿${currentOrder.total}</span>
+                    </div>`;
+                    finalOrderSummaryEl.innerHTML = summaryHtml;
+
                 } catch (error) {
                     console.error('Error sending data to n8n:', error);
                     showMessageBox('เกิดข้อผิดพลาดในการส่งข้อมูล', 'red');
@@ -495,8 +527,4 @@
     </script>
 </body>
 </html>
-
-
-
-
 
