--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ document.addEventListener('DOMContentLoaded', () => {
         { id: 'hearty-green', name: 'Hearty Green', price: 70, unit: 'ขวด (200ml)', ingredients: 'แอปเปิ้ล, สับปะรด, แตงกวา', properties: 'ลดคอเลสเตอรอลและต่อต้านมะเร็ง', imageUrl: 'https://github.com/kornkawes/VerveImage/blob/main/4.png?raw=true' },
         { id: 'sweet-detox', name: 'Sweet Detox', price: 70, unit: 'ขวด (200ml)', ingredients: 'แอปเปิ้ล, แครอท, บีทรูท', properties: 'ล้างสารพิษสำหรับคนควบคุมน้ำหนัก, ต้านสารอนุมูลอิสระ', imageUrl: 'https://github.com/kornkawes/VerveImage/blob/main/5.png?raw=true' },
         { id: 'beet-love', name: 'Beet Love', price: 70, unit: 'ขวด (200ml)', ingredients: 'แอปเปิ้ล, บีทรูท, มะนาว', properties: 'ดูแลสุขภาพหัวใจและควบคุมความดันโลหิต', imageUrl: 'https://github.com/kornkawes/VerveImage/blob/main/6.png?raw=true' },
-        { id: 'smart-sip', name: 'Smart Sip', price: 70, unit: 'ขวด (200ml)', ingredients: 'แอปเปิ้ล, คะน้า, สับปะรด', properties: 'ช่วยบำรุงการทำงานของสมองและบำรุงสายตา', imageUrl: 'https://github.com/kornkawes/VerveImage/blob/main/7.png?raw=true' },
+        { id: 'smart-sip', name: 'Smart Sip', price: 70, unit: 'ขวด (200ml)', ingredients: 'แอปเปิ้ล, เคล, สับปะรด', properties: 'ช่วยบำรุงการทำงานของสมองและบำรุงสายตา', imageUrl: 'https://github.com/kornkawes/VerveImage/blob/main/7.png?raw=true' },
         { id: 'recharge-me', name: 'Recharge Me', price: 70, unit: 'ขวด (200ml)', ingredients: 'แอปเปิ้ล, ขิง, มะนาว', properties: 'กระตุ้นร่างกายให้ฟื้นตัวจากการเมื่อยล้า', imageUrl: 'https://github.com/kornkawes/VerveImage/blob/main/8.png?raw=true' }
     ];
 
@@ -746,6 +746,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
