--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="mb-4">
             <label for="customerNote" class="block text-gray-700 font-bold mb-2">หมายเหตุ</label>
-            <textarea id="customerNote" placeholder="เช่น มารับเอง,ใส่ตู้เย็นเก็บไว้"
+            <textarea id="customerNote" placeholder="เช่น รับที่ BTS ศาลาแดง, อื่นๆ"
                       class="w-full px-4 py-2 border rounded-xl focus:outline-none focus:ring-2 focus:ring-emerald-300 resize-none h-24"></textarea>
         </div>
 
@@ -746,6 +746,7 @@ document.addEventListener('DOMContentLoaded', () => {
 </script>
 </body>
 </html>
+
 
 
 
